Fix max width on mobile.

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -60,7 +60,7 @@ header.main-header {
 
 div#main {
 	padding: 20px;
-	max-width: 800px;
+	max-width: 100%;
 	margin: 0 auto;
 }
 
